--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -1,6 +1,10 @@
 services:
   database:
     image: 'postgres:16.10-alpine3.22'
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     env_file:
       - ../.env.development
     ports:
